--- a/ant.vcxproj
+++ b/ant.vcxproj
@@ -140,6 +140,12 @@
     <ClCompile Include="src\asset_managers\shader_manager.cpp" />
     <ClCompile Include="src\asset_managers\texture_manager.cpp" />
     <ClCompile Include="src\collision.cpp" />
+    <ClCompile Include="src\collisions\cylinder.cpp" />
+    <ClCompile Include="src\collisions\plane.cpp" />
+    <ClCompile Include="src\collisions\ray.cpp" />
+    <ClCompile Include="src\collisions\segment.cpp" />
+    <ClCompile Include="src\collisions\sphere.cpp" />
+    <ClCompile Include="src\collisions\triangle.cpp" />
     <ClCompile Include="src\components\animation_component.cpp" />
     <ClCompile Include="src\components\camera_component.cpp" />
     <ClCompile Include="src\components\enemy_component.cpp" />
@@ -181,6 +187,15 @@
     <ClInclude Include="src\asset_managers\shader_manager.h" />
     <ClInclude Include="src\asset_managers\texture_manager.h" />
     <ClInclude Include="src\collision.h" />
+    <ClInclude Include="src\collisions\aabb.h" />
+    <ClInclude Include="src\collisions\capsule.h" />
+    <ClInclude Include="src\collisions\cylinder.h" />
+    <ClInclude Include="src\collisions\obb.h" />
+    <ClInclude Include="src\collisions\plane.h" />
+    <ClInclude Include="src\collisions\ray.h" />
+    <ClInclude Include="src\collisions\segment.h" />
+    <ClInclude Include="src\collisions\sphere.h" />
+    <ClInclude Include="src\collisions\triangle.h" />
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\components\anchor_component.h" />
     <ClInclude Include="src\components\animation_component.h" />
