--- a/ant.vcxproj.filters
+++ b/ant.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClCompile Include="src\asset_managers\model_manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\collisions\capsule.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\actor.h">
