--- a/ant.vcxproj.filters
+++ b/ant.vcxproj.filters
@@ -162,6 +162,9 @@
     <ClCompile Include="src\collisions\capsule.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\collisions\collider.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\actor.h">
@@ -324,6 +327,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\asset_managers\model_manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\collisions\collider.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
