--- a/ant.vcxproj
+++ b/ant.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\scene.cpp" />
     <ClCompile Include="src\collisions\mesh_collider.cpp" />
     <ClCompile Include="src\collisions\collider.cpp" />
     <ClCompile Include="src\asset_managers\model_manager.cpp" />
@@ -180,6 +181,7 @@
     <ClCompile Include="src\win32_platform.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\scene.h" />
     <ClInclude Include="src\collisions\mesh_collider.h" />
     <ClInclude Include="src\collisions\collider.h" />
     <ClInclude Include="src\asset_managers\model_manager.h" />
