--- a/ant.vcxproj.filters
+++ b/ant.vcxproj.filters
@@ -168,6 +168,9 @@
     <ClCompile Include="src\collisions\mesh_collider.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\scene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\actor.h">
@@ -336,6 +339,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\collisions\mesh_collider.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\notification.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
