--- a/ant.vcxproj
+++ b/ant.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="src\win32_platform.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\notification.h" />
     <ClInclude Include="src\scene.h" />
     <ClInclude Include="src\collisions\mesh_collider.h" />
     <ClInclude Include="src\collisions\collider.h" />
