actor_manager refactor (remove slotmaps)

--- a/ant.vcxproj
+++ b/ant.vcxproj
@@ -127,6 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\components\component.cpp" />
+    <ClCompile Include="src\actor_manager.cpp" />
     <ClCompile Include="src\components\bullet_component.cpp" />
     <ClCompile Include="src\scene.cpp" />
     <ClCompile Include="src\collisions\mesh_collider.cpp" />
@@ -182,6 +184,8 @@
     <ClCompile Include="src\win32_platform.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\component_list.h" />
+    <ClInclude Include="src\actor_manager.h" />
     <ClInclude Include="src\components\bullet_component.h" />
     <ClInclude Include="src\notification.h" />
     <ClInclude Include="src\scene.h" />
