--- a/ant.vcxproj
+++ b/ant.vcxproj
@@ -127,7 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\states\game_state.cpp" />
+    <ClCompile Include="src\components\collider_component.cpp" />
+    <ClCompile Include="src\states\play_state.cpp" />
     <ClCompile Include="src\states\menu_state.cpp" />
     <ClCompile Include="src\components\component.cpp" />
     <ClCompile Include="src\actor_manager.cpp" />
@@ -166,7 +167,7 @@
     <ClCompile Include="src\components\weapon_component.cpp" />
     <ClCompile Include="src\containers.cpp" />
     <ClCompile Include="src\debug_renderer_d3d11.cpp" />
-    <ClCompile Include="src\game.cpp" />
+    <ClCompile Include="src\game_manager.cpp" />
     <ClCompile Include="src\graphics_manager.cpp" />
     <ClCompile Include="src\graphics_manager_d3d11.cpp" />
     <ClCompile Include="src\input_manager.cpp" />
@@ -187,7 +188,8 @@
     <ClCompile Include="src\win32_platform.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\states\game_state.h" />
+    <ClInclude Include="src\components\collider_component.h" />
+    <ClInclude Include="src\states\play_state.h" />
     <ClInclude Include="src\states\menu_state.h" />
     <ClInclude Include="src\component_list.h" />
     <ClInclude Include="src\actor_manager.h" />
@@ -232,7 +234,7 @@
     <ClInclude Include="src\components\weapon_component.h" />
     <ClInclude Include="src\containers.h" />
     <ClInclude Include="src\debug_renderer_d3d11.h" />
-    <ClInclude Include="src\game.h" />
+    <ClInclude Include="src\game_manager.h" />
     <ClInclude Include="src\graphics_manager.h" />
     <ClInclude Include="src\graphics_manager_d3d11.h" />
     <ClInclude Include="src\input_manager.h" />
