--- a/ant.vcxproj.filters
+++ b/ant.vcxproj.filters
@@ -195,6 +195,9 @@
     <ClCompile Include="src\ui_renderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\bounding_volume_hierarchie.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\actor.h">
@@ -399,6 +402,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\ui_button.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\bounding_volume_hierarchie.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
