fix assetmanagers frame allocator bug (have to keep working on this)

--- a/ant.vcxproj.filters
+++ b/ant.vcxproj.filters
@@ -213,6 +213,9 @@
     <ClCompile Include="src\particle_systems\shoot_ps.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\asset_managers\animation_manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\actor.h">
@@ -435,6 +438,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\particle_systems\shoot_ps.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\asset_managers\animation_manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
