--- a/ant.vcxproj
+++ b/ant.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\asset_managers\animation_manager.cpp" />
     <ClCompile Include="src\particle_systems\blood_ps.cpp" />
     <ClCompile Include="src\particle_systems\particle_system.cpp" />
     <ClCompile Include="src\batch_renderer.cpp" />
@@ -195,6 +196,7 @@
     <ClCompile Include="src\ui_renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\asset_managers\animation_manager.h" />
     <ClInclude Include="src\particle_systems\blood_ps.h" />
     <ClInclude Include="src\particle_systems\particle_system.h" />
     <ClInclude Include="src\batch_renderer.h" />
