--- a/ant.vcxproj.filters
+++ b/ant.vcxproj.filters
@@ -219,6 +219,12 @@
     <ClCompile Include="src\components\portal_component.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\components\effect_component.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\particle_systems\fire_ps.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\actor.h">
@@ -449,6 +455,12 @@
     <ClInclude Include="src\components\portal_component.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\components\effect_component.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\particle_systems\fire_ps.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="data\xml\bullet.xml" />
@@ -463,5 +475,6 @@
     <Xml Include="data\xml\level1.xml" />
     <Xml Include="data\xml\mona.xml" />
     <Xml Include="data\xml\portal.xml" />
+    <Xml Include="data\xml\default.xml" />
   </ItemGroup>
 </Project>
