add key and fence assets

--- a/ant.vcxproj
+++ b/ant.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\components\effect_component.cpp" />
+    <ClCompile Include="src\components\key_component.cpp" />
     <ClCompile Include="src\components\portal_component.cpp" />
     <ClCompile Include="src\asset_managers\animation_manager.cpp" />
     <ClCompile Include="src\particle_systems\blood_ps.cpp" />
@@ -199,6 +200,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\components\effect_component.h" />
+    <ClInclude Include="src\components\key_component.h" />
     <ClInclude Include="src\components\portal_component.h" />
     <ClInclude Include="src\asset_managers\animation_manager.h" />
     <ClInclude Include="src\particle_systems\blood_ps.h" />
@@ -278,7 +280,8 @@
   </ItemGroup>
   <ItemGroup>
     <Xml Include="data\xml\default.xml" />
-    <Xml Include="data\xml\bullet.xml" />
+    <Xml Include="data\xml\fence.xml" />
+    <Xml Include="data\xml\key.xml" />
     <Xml Include="data\xml\enemy.xml" />
     <Xml Include="data\xml\house.xml" />
     <Xml Include="data\xml\level1.xml" />
