--- a/ant.vcxproj.filters
+++ b/ant.vcxproj.filters
@@ -225,6 +225,9 @@
     <ClCompile Include="src\components\key_component.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\components\tiled_render_component.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\actor.h">
@@ -459,6 +462,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\components\key_component.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\components\tiled_render_component.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
