--- a/ant.vcxproj.filters
+++ b/ant.vcxproj.filters
@@ -228,6 +228,9 @@
     <ClCompile Include="src\components\tiled_render_component.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\components\animated__render_component.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\actor.h">
@@ -465,6 +468,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\components\tiled_render_component.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\components\animated_render_component.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
