--- a/ant.vcxproj
+++ b/ant.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="src\components\animated__render_component.cpp" />
     <ClCompile Include="src\components\effect_component.cpp" />
+    <ClCompile Include="src\components\fence_component.cpp" />
     <ClCompile Include="src\components\key_component.cpp" />
     <ClCompile Include="src\components\portal_component.cpp" />
     <ClCompile Include="src\asset_managers\animation_manager.cpp" />
@@ -203,6 +204,7 @@
   <ItemGroup>
     <ClInclude Include="src\components\animated_render_component.h" />
     <ClInclude Include="src\components\effect_component.h" />
+    <ClInclude Include="src\components\fence_component.h" />
     <ClInclude Include="src\components\key_component.h" />
     <ClInclude Include="src\components\portal_component.h" />
     <ClInclude Include="src\asset_managers\animation_manager.h" />
@@ -297,6 +299,11 @@
     <Xml Include="data\xml\test-level.xml" />
     <Xml Include="data\xml\tower.xml" />
     <Xml Include="data\xml\wizard.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\actor_manager.tpp" />
+    <None Include="src\component_list.tpp" />
+    <None Include="src\ui_button.tpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
