--- a/ant.vcxproj.filters
+++ b/ant.vcxproj.filters
@@ -231,6 +231,9 @@
     <ClCompile Include="src\components\animated__render_component.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\components\fence_component.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\actor.h">
@@ -473,6 +476,9 @@
     <ClInclude Include="src\components\animated_render_component.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\components\fence_component.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="data\xml\key.xml" />
@@ -489,5 +495,10 @@
     <Xml Include="data\xml\portal.xml" />
     <Xml Include="data\xml\default.xml" />
     <Xml Include="data\xml\fence.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\actor_manager.tpp" />
+    <None Include="src\component_list.tpp" />
+    <None Include="src\ui_button.tpp" />
   </ItemGroup>
 </Project>
